# patterns

./: AbstractFactory.cc  Adapter.cc  Builder.cc  CMakeLists.txt  ChainOfResponsibility.cc  Command.cc  Composite.cc  Facade.cc  Iterator.cc  MVC.cpp  Mediator.cc  Memento.cc  Observer.cpp  Prototype.cc  Proxy.cpp  Singleton.cc  State.cpp  Strategy.cpp  Visitor.cpp
