cmake_minimum_required(VERSION 3.17)
project(oop)

set(CMAKE_CXX_STANDARD 14)

add_executable(MVC MVC.cpp)
add_executable(AbstractFactory AbstractFactory.cc)
add_executable(Adapter Adapter.cc)
add_executable(Builder Builder.cc)
add_executable(ChainOfResponsibility ChainOfResponsibility.cc)
add_executable(Command.cpp Command.cc)
add_executable(Composite Composite.cc)
add_executable(Facade Facade.cc)
add_executable(Iterator Iterator.cc)
add_executable(Mediator Mediator.cc)
add_executable(Memento Memento.cc)
add_executable(Observer Observer.cpp)
add_executable(Prototype Prototype.cc)
add_executable(Proxy Proxy.cpp)
add_executable(Singleton Singleton.cc)
# add_executable(SingletonArchived SingletonArchived.cpp)
add_executable(State State.cpp)
add_executable(Strategy Strategy.cpp)
add_executable(Visitor Visitor.cpp)